--- a/test e sviluppo/debruijn_graph_genome_assembler.ipynb
+++ b/test e sviluppo/debruijn_graph_genome_assembler.ipynb
@@ -152,26 +152,26 @@
     "    #il percorso dovrà percorrere ogni arco una ed una sola volta\n",
     "    expected_path_length = sum([len(adjl) for adjl in adjacency_list]) + 1\n",
     "    \n",
-    "    #applichiamo l'algoritmo di Hohenzoller (check spelling). \n",
+    "    #applichiamo l'algoritmo di Hierholtzer. \n",
     "    semi_eulerian_path = []\n",
-    "    hohenzoller_stack =  []\n",
+    "    hierholtzer_stack =  []\n",
     "    \n",
     "    def top(stack):\n",
     "        return stack[-1]\n",
     "    \n",
     "    #manteniamo uno stack con i nodi da visitare; partiamo visitando il nodo con bilancio 1.\n",
-    "    hohenzoller_stack.append(start_node)\n",
-    "    while hohenzoller_stack:\n",
+    "    hierholtzer_stack.append(start_node)\n",
+    "    while hierholtzer_stack:\n",
     "        current_node = top(hohenzoller_stack)\n",
     "        #se la lista degli archi del nodo corrente non è ancora stata visitata del tutto,\n",
     "        #attraversiamo uno dei possibili archi e poniamo come prossimo nodo da esaminare \n",
     "        #quello in cui incide l'arco; poi coloriamo l'arco.\n",
     "        if adjacency_list[current_node]:\n",
     "            next_node = adjacency_list[current_node].pop()\n",
-    "            hohenzoller_stack.append(next_node)\n",
+    "            hierholtzer_stack.append(next_node)\n",
     "        #se non ci sono più archi da visitare, inseriamo quel nodo all'inizio del cammino.\n",
     "        else:\n",
-    "            semi_eulerian_path.append(hohenzoller_stack.pop())\n",
+    "            semi_eulerian_path.append(hierholtzer_stack.pop())\n",
     "\n",
     "    if len(semi_eulerian_path) == expected_path_length:\n",
     "        return semi_eulerian_path[::-1]\n",
